# openreview-py

./: .coverage  .coveragerc  .gitignore  .pylintrc  .readthedocs.yml  CLAUDE.md  LICENSE  MANIFEST.in  README.md  Venue Local.ipynb  examples.md  llm.txt  profile_position_log.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  unit-test.py
.circleci/: ci-utils.sh  config.yml
.claude/: settings.json
.claude/agents/: test-runner.md
.claude/hooks/: pytest-cleanup.sh  pytest-setup.sh
.claude/scripts/: setup-testing.sh  stop-testing.sh
.github/workflows/: deploy-dev.yml  deploy-expertise.yml  deploy-prod-api2.yml  deploy-prod.yml  deploy.yml  publish-and-deploy-dev.yml  publish-pypi.yml  publish-testpypi.yml
OpenReviewPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docker/: .dockerignore  Dockerfile.api  Dockerfile.test  Dockerfile.web  config.example.json  docker-compose.serve.yml  docker-compose.yml  run-tests.sh  run.py
docker/scripts/: api-v1-entrypoint.sh  api-v2-entrypoint.sh  test-entrypoint.sh  test-shell-entrypoint.sh  web-entrypoint.sh
docs/: Makefile
docs/_static/: add_references_to_a_profile.ipynb
docs/source/: About OpenReview.rst  about.rst  api.rst  autodoc.rst  client_fns.rst  conf.py  conference_builder.rst  conference_builder.srt  downloading_data_for_matching.rst  examples.rst  get_all_venues.rst  get_submission_invitations.rst  getting_data.rst  help.rst  how_to_setup.rst  icml.ipynb  icml.py  index.rst  matcher.rst  matching_data.rst  mental_models.rst  multiprocessing.rst  profiles.rst  samples.rst  tools_fns.rst  update_profiles.rst  workshop.rst
openreview/: __init__.py  common.py  conference.py  duplicate_domains.json  helpers.py  invitations.py  matching.py  mfa.py  mimetypes.json  openreview.py  openreview_api.py  process.py  rendered_js.py  tools.py  webfield.py
openreview/aaai/: commands.py
openreview/agora/: __init__.py  agora.py
openreview/api/: __init__.py  client.py  iThenticate_client.py
openreview/arr/: __init__.py  arr.py  helpers.py  invitation.py  root_invitation.py
openreview/conference/: __init__.py  builder.py  helpers.py  invitation.py  matching.py  webfield.py
openreview/cycles/: __init__.py  cycles.py  group.py  invitation.py  matching.py
openreview/iThenticate/: commands.py
openreview/invitations/: __init__.py  content.py  templates.py
openreview/journal/: __init__.py  assignment.py  group.py  invitation.py  journal.py  messages.py  recruitment.py  super_invitation.txt  templates.py
openreview/journal_classical/: README.md  __init__.py  runner.py  source_pyproject.toml
openreview/llm/: __init__.py  llm_gateway.py
openreview/profile/: __init__.py  arxiv_subject_areas.py  management.py
openreview/scripts/: download_iclr19.py
openreview/stages/: __init__.py  arr_content.py  default_content.py  venue_stages.py
openreview/tools/: __init__.py  replace_members_with_ids.py  tools.py
openreview/venue/: ICML_revs.json  __init__.py  edit_invitation.py  group.py  helpers.py  invitation.py  matching.py  raw_templates.py  recruitment.py  templates.py  venue.py
openreview/venue_request/: __init__.py  venue_request.py
tests/: .readthedocs.yml  arr_v2_test_bootstrap.py  conftest.py  test_aaai_conference.py  test_abstract_deadline.py  test_acl_commitment.py  test_acl_commitment_v2.py  test_acs_and_reviewers.py  test_agora.py  test_arr_metadata_revision_bug.py  test_arr_venue.py  test_arr_venue_v2 copy.py  test_arr_venue_v2.py  test_arr_venue_v2_1_workflow.py  test_arr_venue_v2_2_forms.py  test_arr_venue_v2_3_commitment.py  test_assign_committee_open_deadline.py  test_assign_reviewers_open_deadline.py  test_bibtex.py  test_builder.py  test_builder_console.py  test_change_venue_email.py  test_client.py  test_collas_conference.py  test_comment_notifications.py  test_compose_dual_anonymous_workflow.py  test_conference.py  test_cvpr_conference.py  test_cvpr_conference_v2.py  test_dmlr_journal.py  test_double_blind_conference.py  test_dummy_pr_verification.py  test_eccv_conference.py  test_edges.py  test_emnlp_conference.py  test_eswc_conference.py  test_full_submission_authors_lock.py  test_group_recruitment.py  test_iclr_conference.py  test_iclr_conference_v2.py  (+64 more)
tools/: tools.py
venue_request/: venue_request.py
(+928 files in other folders)
