[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openreview-py"
version = "1.52.1"
description = "OpenReview API Python client library"
authors = [{name = "OpenReview Team", email = "info@openreview.net"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pycryptodome==3.23.0",
    "requests==2.32.5",
    "future==1.0.0",
    "tqdm==4.67.1",
    "Deprecated==1.2.18",
    "pylatexenc==2.10",
    "tld==0.13.1",
    "pyjwt==2.10.1",
    "numpy==2.3.2",
    "litellm==1.76.2",
]

[project.urls]
Homepage = "https://github.com/openreview/openreview-py"

[project.optional-dependencies]
docs = [
    "nbsphinx==0.9.7",
    "sphinx==8.1.3",
    "sphinx_rtd_theme==3.0.2",
    "nbformat==5.10.4",
]

dev = [
    "py==1.11.0",
    "pytest==8.4.2",
    "selenium==4.35.0",
    "pytest-selenium==4.1.0",
]

[tool.setuptools.package-data]
"openreview" = ["*"]

[tool.setuptools.packages.find]
include = [
    "openreview",
    "openreview.conference",
    "openreview.profile",
    "openreview.agora",
    "openreview.venue",
    "openreview.venue_request",
    "openreview.journal",
    "openreview.journal.journal_request",
    "openreview.stages",
    "openreview.arr",
    "openreview.api",
    "openreview.workflows"
]
