[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openreview-py"
version = "1.59.1"
description = "OpenReview API Python client library"
authors = [{name = "OpenReview Team", email = "info@openreview.net"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pycryptodome==3.23.0",
    "requests==2.32.5",
    "future==1.0.0",
    "tqdm==4.67.3",
    "Deprecated==1.3.1",
    "pylatexenc==2.10",
    "tld==0.13.2",
    "pyjwt==2.12.1",
    "numpy==2.0.2; python_version < '3.10'",
    "numpy==2.2.6; python_version == '3.10'",
    "numpy==2.4.3; python_version >= '3.11'"
]

[project.urls]
Homepage = "https://github.com/openreview/openreview-py"

[project.optional-dependencies]
docs = [
    "nbsphinx",
    "sphinx",
    "sphinx_rtd_theme",
    "nbformat"
]
test = [
    "pytest==9.0.2",
    "py==1.11.0",
    "pyotp==2.9.0",
    "selenium==4.41.0",
    "pytest-selenium==4.1.0",
    "pytest-cov==7.1.0"
]

[tool.setuptools.package-data]
"openreview" = ["*"]

[tool.setuptools.packages.find]
include = [
    "openreview",
    "openreview.conference",
    "openreview.profile",
    "openreview.agora",
    "openreview.venue",
    "openreview.venue_request",
    "openreview.journal",
    "openreview.journal.journal_request",
    "openreview.stages",
    "openreview.arr",
    "openreview.api",
    "openreview.workflows"
]
